--- a/Pages/rickbucks.html
+++ b/Pages/rickbucks.html
@@ -11,7 +11,7 @@
 <body>
   <div>
     <ul id="navbar">
-      <li id="linav"><a id="anav" href="https://rickin.coderrboi.repl.co">home</a></li>
+      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li class="active" id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
