--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <br>
   <br>
   <div id="content">
-    <a target="_blank" href="https://ricksaver.coderrboi.repl.co/"><img class="rotate" height="350px" length="175px"
+    <a target="_blank" href="https://dacoder101.github.io/ricksaver/index.html"><img class="rotate" height="350px" length="175px"
         id="peproni" src="Resources/rickarms.jpeg"></a>
     <iframe id="ytplayer" type="text/html" width="640" height="360"
       src="https://www.youtube.com/embed/dQw4w9WgXcQ?&autoplay=1&loop=1&mute=1&origin=http://example.com"
