Fixed incorrect hyperlinks to saver domain

--- a/Pages/rickbucks.html
+++ b/Pages/rickbucks.html
@@ -20,7 +20,7 @@
   </div>
   <hr>
   <div id="rickf">
-    <h1><a id="rickftx" target="_blank" href="https://dacoder101.github.io/idiotsaver/index.html">rickdiot</a></h1>
+    <h1><a id="rickftx" target="_blank" href="https://dacoder101.github.io/savers/idiotsaver/index.html">rickdiot</a></h1>
   </div>
 </body>
 
