--- a/Pages/terms.html
+++ b/Pages/terms.html
@@ -27,11 +27,8 @@
     <p>agree to <a target="_blank" href="https://en.wikipedia.org/wiki/Rickrolling">click here</a></p>
     <b>CHAPTER 2 SUBCHATPER 2</b>
     <p>you admire rick astley<br><b><u>IN HDDDDDDDDDDDDDDD</u></b></p>
-    <b>CHAPTER 3 SUBCHAPTER 1</b>
+    <b>CHAPTER 3</b>
     <p>you will never be maken cry<br>or never will anyone say goodbye<br>nor will they tell a lie<br>that hurts you</p>
     <b>CHAPTER 3 SUBCHAPTER 2</b>
-    <p>you continue admire rick astley<br><b><u>IN HDDDDDDDDDDDDDDD</u></b></p>
-  </div>
-</body>
-
+    <p>you continue admire rick astley<br><b><u>IN HDDDDDDDDDDDDDDD</u></b></p>Y
 </html>
