--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!-- THIS IS NO LONGER BEING MAINTAINED ON REPLIT, AND WILL BE CONTINUED WITH GITHUB CODESPACES, A NEW LINK WILL BE GIVEN OUT ON TUESDAY!-->
+<!-- THIS IS NO LONGER BEING MAINTAINED ON REPLIT, AND WILL BE CONTINUED WITH A GITHUB DOMAIN-->
+
+<!--
+EDITORS:
+homodepot (Jiho Kang)
+dacoder101 (Bobby Elmore)
+-->
 
 <!DOCTYPE html>
 <html>
@@ -21,11 +27,7 @@
     </ul>
   </div>
   <hr id="content">
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <br><br><br><br><br>
   <div id="content">
     <a target="_blank" href="https://dacoder101.github.io/savers/ricksaver/index.html"><img class="rotate" height="350px" length="175px"
         id="peproni" src="Resources/rickarms.jpeg"></a>
