--- a/Pages/terms.html
+++ b/Pages/terms.html
@@ -12,7 +12,7 @@
   <div>
     <ul id="navbar">
       <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
-      <li class="active" id="linav"><a id="anav" href="Pages/terms.html">terms & cond.</a></li>
+      <li class="active" id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
