Credits and Edits

--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -1,1 +1,49 @@
-<p>This page will be worked on and completed tommorow!</p>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+  <title>Credits</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../Styles/credits.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div>
+    <ul id="navbar">
+      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
+      <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
+      <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
+      <li class="active" id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
+    </ul>
+  </div>
+  <hr>
+  <div>
+    <h2 id="creditsstatement">
+      This website was a mini-project/fun thing I worked on overtime.<br>
+      This serves no purpose and is entirely made up.<br>
+      Thanks to all who gave me ideas and prolonged the creation of rickin!
+    </h2>
+  </div>
+  <hr>
+  <div>
+    <h1>Credits:</h1>
+    <h2>Editors:<br>
+      <h3>dacoder101, Bobby Elmore (Owner, Creator, Lead)</h3>
+      <h3>lumauser, Jiho Kang, (Editor, Contributor)</h3>
+      <h6>Any help or contributions are greatly appreciated!</h6>
+    </h2>
+    <h2>Resources:<h2>
+      <h3>I used many images during this project, and they can be accessed <a href="https://dacoder101.github.io/rickin/Resources/">here.</a><br>
+      Access to all files and code can be found on the <a href="https://github.com/dacoder101/rickin">GitHub repository.</a><br>
+      I learned a lot of new HTML, CSS, and JS skills I wouldn't have bothered to learn from websites like <a href="https://w3schools.org">w3Schools</a> and <a href="https://stackoverflow.com">Stack Overflow</a>.<br>
+      The base front-end development knowledge I knew was some self-taught, but was gained from the Responsive Web Design course on <a href="htrps://freecodecamp.org">FreeCodeCamp</a>.<br>
+      Navbar styling was inspired by w3schools.
+    </h3>
+    <h1><u><b>SPECIAL THANKS TO NONE OTHER THAN...<br><i>RICHARD PAUL ASTLEY!</i></b></u></h1>
+  </div>
+</body>
+
+</html>
