--- a/Pages/terms.html
+++ b/Pages/terms.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>da "um"terms & cond.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../Resources/rickoboio.jpeg">
   <link rel="stylesheet" href="../Styles/terms.css">
   <script src="../Scripts/terms.js"></script>
@@ -16,6 +18,7 @@
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
+      <li id="linav"><a id="anav" href="../Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr>
