--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- THIS IS NO LONGER BEING MAINTAINED ON REPLIT, AND WILL BE CONTINUED WITH A GITHUB DOMAIN-->
 
 <!--
-EDITORS:
-homodepot (Jiho Kang)
-dacoder101 (Bobby Elmore)
+MAINTAINERS.
+dacoder101 (Bobby Elmore) (Owner, Creator, Lead)
+homodepot (Jiho Kang), (Assistant)
 -->
 
 <!DOCTYPE html>
@@ -11,6 +11,8 @@ dacoder101 (Bobby Elmore)
 
 <head>
   <title>rickin; rickin finee</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="Resources/norickboi.jpeg">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
@@ -19,11 +21,13 @@ dacoder101 (Bobby Elmore)
 <body id="body">
   <div>
     <ul id="navbar">
-      <li class="active" id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="Pages/rickplayz.html">rickplayz</a></li>
+      <li id="linav" class="active"><a id="anav" href="Pages/credits.html">credits</a></li>
+      <li id="linav"><a id="anav" href="Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr id="content">
@@ -39,7 +43,7 @@ dacoder101 (Bobby Elmore)
   <div id="content">
     <button onClick="oohlala()"><b>NGGYU</b></button>
     <button onClick="bericked()"><b>bericked</b></button>
-    <button><a href="Resources/ricksshakinarms.gif"><b id="rickgif">ricks shakin arms</b></a></button>
+    <button><a href="Resources/ricksshakinarms.gif"><b id="rickgif">rickier arms</b></a></button>
   </div>
 </body>
 
