--- a/Pages/rickplayz.html
+++ b/Pages/rickplayz.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>RickPlayz Professional Gaming</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="../Resources/rickplayz.jpeg">
   <link rel="stylesheet" href="../Styles/rickplayz.css">
   <script src="../Scripts/rickplayz.js"></script>
@@ -16,6 +18,7 @@
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
       <li class="active" id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
+      <li id="linav"><a id="anav" href="../Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr>
