--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -32,7 +32,7 @@
     <h1>Credits:</h1>
     <h2>Editors:<br>
       <h3>dacoder101, Bobby Elmore (Owner, Creator, Lead)</h3>
-      <h3>lumauser, Jiho Kang, (Editor, Contributor)</h3>
+      <h3>lumauser, Jiho Kang, (Editor, Contributor, Codes at night)</h3>
       <h6>Any help or contributions are greatly appreciated!</h6>
     </h2>
     <h2>Resources:<h2>
