pls make it work

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@ homodepot (Jiho Kang), (Assistant)
 <body id="body">
   <div>
     <ul id="navbar">
-      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li class="active" id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="Pages/rickplayz.html">rickplayz</a></li>
-      <li id="linav" class="active"><a id="anav" href="Pages/credits.html">credits</a></li>
       <li id="linav"><a id="anav" href="Pages/credits.html">credits</a></li>
     </ul>
   </div>
