--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -16,7 +16,8 @@
       <li id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
-      <li class="active" id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
+      <li id="linav"><a id="anav" href="../Pages/rickplayz.html">rickplayz</a></li>
+      <li class="active" id="linav"><a id="anav" href="../Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr>
