Fixed Credits Issues/Improvements + Background

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- THIS IS NO LONGER BEING MAINTAINED ON REPLIT, AND WILL BE CONTINUED WITH A GITHUB DOMAIN-->
 
 <!--
-MAINTAINERS.
+MAINTAINERS:
 dacoder101 (Bobby Elmore) (Owner, Creator, Lead)
 homodepot (Jiho Kang), (Assistant)
 -->
@@ -27,7 +27,6 @@ homodepot (Jiho Kang), (Assistant)
       <li id="linav"><a id="anav" href="Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="Pages/rickplayz.html">rickplayz</a></li>
       <li id="linav" class="active"><a id="anav" href="Pages/credits.html">credits</a></li>
-      <li id="linav"><a id="anav" href="Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr id="content">
