--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ homodepot (Jiho Kang), (Assistant)
       <li id="linav"><a id="anav" href="Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="Pages/rickbucks.html">free rickbucks</a></li>
       <li id="linav"><a id="anav" href="Pages/rickplayz.html">rickplayz</a></li>
-      <li id="linav" class="active"><a id="anav" href="Pages/credits.html">credits</a></li>
+      <li id="linav"><a id="anav" href="Pages/credits.html">credits</a></li>
     </ul>
   </div>
   <hr id="content">
