Removed Unused IDs

--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -22,7 +22,7 @@
   </div>
   <hr>
   <div>
-    <h2 id="statement">
+    <h2>
       This website was a mini-project/fun thing I worked on with time.<br>
       This serves no purpose and was made entirely for fun.
     </h2>
@@ -42,7 +42,7 @@
       The base front-end development knowledge I knew was some self-taught, but was gained from the Responsive Web Design course on <a href="https://freecodecamp.org">FreeCodeCamp</a>.<br>
       Navbar styling was inspired by w3schools.
     </h3>
-    <h1 id="thxrick"><u><b>SPECIAL THANKS TO NONE OTHER THAN...<br><i>RICHARD PAUL ASTLEY!</i></b></u></h1>
+    <h1><u><b>SPECIAL THANKS TO NONE OTHER THAN...<br><i>RICHARD PAUL ASTLEY!</i></b></u></h1>
   </div>
 </body>
 
