--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../Styles/credits.css" rel="stylesheet" type="text/css">
+  <link href="../Resources/rickoboio.jpeg" rel="icon" type="image/png">
 </head>
 
 <body>
