--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!--
 MAINTAINERS:
-dacoder101 (Bobby Elmore) (Owner, Creator, Lead)
+bqbbo (Bobby Elmore) (Owner, Creator, Lead)
 homodepot (Jiho Kang), (Assistant)
 -->
 
@@ -21,7 +21,7 @@ homodepot (Jiho Kang), (Assistant)
 <body id="body">
   <div>
     <ul id="navbar">
-      <li class="active" id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li class="active" id="linav"><a id="anav" href="https://bqbbo.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="Pages/rickbucks.html">free rickbucks</a></li>
@@ -32,7 +32,7 @@ homodepot (Jiho Kang), (Assistant)
   <hr id="content">
   <br><br><br><br><br>
   <div id="content">
-    <a target="_blank" href="https://dacoder101.github.io/savers/ricksaver/index.html"><img class="rotate" height="350px" length="175px"
+    <a target="_blank" href="https://bqbbo.github.io/savers/ricksaver/index.html"><img class="rotate" height="350px" length="175px"
         id="peproni" src="Resources/rickarms.jpeg"></a>
     <iframe id="ytplayer" type="text/html" width="640" height="360"
       src="https://www.youtube.com/embed/dQw4w9WgXcQ?&autoplay=1&loop=1&mute=1&origin=http://example.com"
