--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -13,7 +13,7 @@
 <body>
   <div>
     <ul id="navbar">
-      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li id="linav"><a id="anav" href="https://bqbbo.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
@@ -32,13 +32,13 @@
   <div>
     <h1>Credits:</h1>
     <h2>Editors:<br>
-      <h3>dacoder101, Bobby Elmore (Owner, Creator, Lead)</h3>
+      <h3>bqbbo, Bobby Elmore (Owner, Creator, Lead)</h3>
       <h3>lumauser, Jiho Kang, (Editor, Contributor)</h3>
       <h6>Any help or contributions are greatly appreciated!</h6>
     </h2>
     <h2>Resources:<h2>
       <h3>
-      Access to all files and code can be found on the <a href="https://github.com/dacoder101/rickin">GitHub repository.</a><br>
+      Access to all files and code can be found on the <a href="https://github.com/bqbbo/rickin">GitHub repository.</a><br>
       I learned a lot of new HTML, CSS, and JS skills I wouldn't have bothered to learn, if not for websites like <a href="https://w3schools.org">w3Schools</a> and <a href="https://stackoverflow.com">Stack Overflow</a>.<br>
       The base front-end development knowledge I knew was some self-taught, but was gained from the Responsive Web Design course on <a href="https://freecodecamp.org">FreeCodeCamp</a>.<br>
       Navbar styling was inspired by w3schools.
