--- a/Pages/rickbucks.html
+++ b/Pages/rickbucks.html
@@ -13,7 +13,7 @@
 <body>
   <div>
     <ul id="navbar">
-      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li id="linav"><a id="anav" href="https://bqbbo.github.io/rickin">home</a></li>
       <li id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li class="active" id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
@@ -23,7 +23,7 @@
   </div>
   <hr>
   <div id="rickf">
-    <h1><a id="rickftx" target="_blank" href="https://dacoder101.github.io/savers/idiotsaver/index.html">rickdiot</a></h1>
+    <h1><a id="rickftx" target="_blank" href="https://bqbbo.github.io/savers/idiotsaver/index.html">rickdiot</a></h1>
   </div>
 </body>
 
