Fix tags & username

--- a/Pages/terms.html
+++ b/Pages/terms.html
@@ -13,7 +13,7 @@
 <body id="body">
   <div>
     <ul id="navbar">
-      <li id="linav"><a id="anav" href="https://dacoder101.github.io/rickin">home</a></li>
+      <li id="linav"><a id="anav" href="https://bqbbo.github.io/rickin">home</a></li>
       <li class="active" id="linav"><a id="anav" href="../Pages/terms.html">terms & cond.</a></li>
       <li id="linav"><a id="anav" href="../Pages/darickrooms.html">rickrooms</a></li>
       <li id="linav"><a id="anav" href="../Pages/rickbucks.html">free rickbucks</a></li>
@@ -33,5 +33,8 @@
     <b>CHAPTER 3</b>
     <p>you will never be maken cry<br>or never will anyone say goodbye<br>nor will they tell a lie<br>that hurts you</p>
     <b>CHAPTER 3 SUBCHAPTER 2</b>
-    <p>you continue admire rick astley<br><b><u>IN HDDDDDDDDDDDDDDD</u></b></p>Y
+    <p>you continue admire rick astley<br><b><u>IN HDDDDDDDDDDDDDDD</u></b></p>
+  </div>
+</body>
+  
 </html>
